# Kalm

./: .gitignore  CMakeLists.txt  README.md
assets/: default.frag  default.vert  ico.dae  matcap.frag  pass.frag  pass.vert  strace.frag  strace.vert  utilities.glsl  whee.frag
demo/: Demo
shaders/: default.frag  matcap.vert  pass.vert  whee.frag  whee.vert
src/: CMakeLists.txt  Camera.cpp  Camera.h  ExportXml.cpp  ExportXml.h  Exporter.cpp  Exporter.h  Input.h  Material.cpp  Material.h  MaterialBank.cpp  MaterialBank.h  Mesh.cpp  Mesh.h  MeshGenerators.h  MeshManager.h  Model.cpp  Model.h  ModelBank.cpp  ModelBank.h  ModelManager.cpp  ModelManager.h  ResourceBank.cpp  ResourceBank.h  ResourceId.h  ResourceStorage.h  Scene.cpp  Scene.h  SceneBank.cpp  SceneBank.h  StaticSingleton.h  Texture.cpp  Texture.h  TextureBank.cpp  TextureBank.h  TextureLoader.cpp  TextureLoader.h  Timeline.cpp  Timeline.h  TimelineItem.h  (+2 more)
src/demo/: CMakeLists.txt  demo_linux.cpp
src/filesystem/: CMakeLists.txt  FileWatcher.cpp  FileWatcher.h  Filesystem.cpp  Filesystem.h
src/gui/: CMakeLists.txt  FileBrowser.cpp  FileBrowser.h  TimelineGui.cpp  TimelineGui.h  gui.cpp  gui.h
src/include/: common.h  config.h.in  log.h  maths.h
src/mesh/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshGenerators.h  MeshManager.cpp  MeshManager.h
src/player/: CMakeLists.txt  player.cpp  player.h
src/render/: CMakeLists.txt  RenderAttributes.h  RenderTypes.h  Rendering.cpp  Rendering.h  ShaderBank.cpp  ShaderBank.h  glRendering.cpp  glRendering.h  gl_model.h  gl_shader.cpp  gl_shader.h  gl_texture.h  gl_utils.h
src/shader/: default.frag  default.vert  matcap.frag  matcap.vert  pass.frag  pass.vert  utilities.vert
